--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calculating the type of a star based on its luminosity and temperature\n",
+    "# Predicting the type of a star based on its luminosity and temperature\n",
     "## By Rohan Arni\n",
     "\n",
     "This project takes in a dataset of stars, their magnitude, and temperature and classifies them into different types of stars. The data is from a [Kaggle](https://www.kaggle.com/datasets/deepu1109/star-dataset) dateset, and the project uses linear regression for the analysis."
